--- a/about.html
+++ b/about.html
@@ -25,11 +25,13 @@
     <div class="container">
         
           <h1>About</h1>
-            <p>Welcome to <strong>Prothoughtinsight..Your Ultimate Hub for Trending Tech, SEO, and Social Media Insights</strong>—your go-to source for the latest in technology, social media marketing, SEO strategies, and much more.</p>
+            <p>Welcome to <strong>Prothoughtinsight..Your Ultimate Hub for Trending Tech, SEO, and Social Media Insights</strong>—your go-to source for the latest in technology, social media marketing, SEO strategies, and much more.</p><br>
+
 
             <h2>Who I Am</h2>
             <img src="./Jaja.jpg" alt="Image of Jaja Victor Barisuka">
-            <p>Founded and created by <strong>Jaja Victor Barisuka</strong>, this blog is dedicated to delivering high-quality, informative, and engaging content. From tech innovations to social media growth hacks, my mission is to empower individuals and businesses to thrive in the digital world.</p>
+            <p>Founded and created by <strong>Jaja Victor Barisuka</strong>, this blog is dedicated to delivering high-quality, informative, and engaging content. From tech innovations to social media growth hacks, my mission is to empower individuals and businesses to thrive in the digital world.</p><br>
+
 
             <h2>What I Cover</h2>
             <ul>
@@ -37,16 +39,20 @@
                 <li><strong>Social Media Marketing:</strong> Proven strategies to grow your online presence across platforms.</li>
                 <li><strong>SEO Optimization:</strong> Expert tips to rank higher on search engines and drive organic traffic.</li>
                 <li><strong>Content Writing:</strong> Insights into modern content creating and writing strategies.</li>
-            </ul>
+            </ul><br>
+
 
             <h2>Mission</h2>
-       <p>My mission is to inform, educate, and inspire my audience by providing valuable insights and actionable tips in the tech, social media marketing, content writing, SEO tips and front-end web development which are all skills I have learnt and developed over the years. As a professional in this fields, Whether you're a content creator, blogger, a tech enthusiast, or a digital marketer, I've got something for you.</p>
+       <p>My mission is to inform, educate, and inspire my audience by providing valuable insights and actionable tips in the tech, social media marketing, content writing, SEO tips and front-end web development which are all skills I have learnt and developed over the years. As a professional in this fields, Whether you're a content creator, blogger, a tech enthusiast, or a digital marketer, I've got something for you.</p><br>
+
 
             <h2>Future Plans</h2>
-            <p>I'm not stopping here! I will expand into video content through my upcoming <strong>YouTube channel</strong> to provide more engaging and interactive content. Stay tuned!</p>
+            <p>I'm not stopping here! I will expand into video content through my upcoming <strong>YouTube channel</strong> to provide more engaging and interactive content. Stay tuned!</p><br>
+
 
             <h2>Join My Community</h2>
-            <p>Ready to stay ahead of the curve? <a href="mailto: victorjaja500@gmail.com">Contact me</a> or follow us on our social media platforms to join our growing community.</p>
+            <p>Ready to stay ahead of the curve? <a href="mailto: victorjaja500@gmail.com">Contact me</a> or follow us on our social media platforms to join our growing community.</p><br>
+
  
       </div>
 
