--- a/youtubeaudience.html
+++ b/youtubeaudience.html
@@ -112,10 +112,10 @@
         </section><br>
 
 
-        <section>
-            <h3>Image Placeholder</h3>
+      <!-- <section>
+            <h2>Image Placeholder</h2>
             <p>[Insert an image of a content creator recording a video with professional equipment.]</p>
-        </section><br>
+        </section><br> -->
 
 
         <p>Got any questions or need some extra tips?  <a href="mailto: victorjaja500@gmail.com">reach out to me here</a>. Let’s grow together!</p><br>
