--- a/youtubeaudience.html
+++ b/youtubeaudience.html
@@ -112,10 +112,10 @@
         </section><br>
 
 
-      <!-- <section>
+       <section>
             <h2>Image Placeholder</h2>
             <p>[Insert an image of a content creator recording a video with professional equipment.]</p>
-        </section><br> -->
+        </section><br> 
 
 
         <p>Got any questions or need some extra tips?  <a href="mailto: victorjaja500@gmail.com">reach out to me here</a>. Let’s grow together!</p><br>
@@ -128,43 +128,7 @@
   <div class="card-title"><a href="./youtubemarketing.html">TOP YOUTUBE MARKETING STRATEGIES FOR YOUR SMALL BUSINESS IN 2025</a></div>
 </fieldset>
       </div>
-
-<!-- <section>
-            <h2>Image Placeholder</h2>
-            <p>[Insert an image of a content creator recording a video with professional equipment.]</p>
-        </section><br> -->
-
-
-        <p>Got any questions or need some extra tips?  <a href="mailto: victorjaja500@gmail.com">reach out to me here</a>. Let’s grow together!</p><br>
-
-
-        <p>Stay Ahead With Thoughtful Insights!</p>
-   
-   <fieldset>
-    <legend>You might also like</legend>
-  <div class="card-title"><a href="./youtubemarketing.html">TOP YOUTUBE MARKETING STRATEGIES FOR YOUR SMALL BUSINESS IN 2025</a></div>
-</fieldset>
-      </div>
-
-
-<!-- <section>
-            <h2>Image Placeholder</h2>
-            <p>[Insert an image of a content creator recording a video with professional equipment.]</p>
-        </section><br> -->
-
-
-        <p>Got any questions or need some extra tips?  <a href="mailto: victorjaja500@gmail.com">reach out to me here</a>. Let’s grow together!</p><br>
-
-
-        <p>Stay Ahead With Thoughtful Insights!</p>
-   
-   <fieldset>
-    <legend>You might also like</legend>
-  <div class="card-title"><a href="./youtubemarketing.html">TOP YOUTUBE MARKETING STRATEGIES FOR YOUR SMALL BUSINESS IN 2025</a></div>
-</fieldset>
-      </div>
-
-
+     
 
         <footer class="footer">
       <p>© 2025 <span class="prothought">ProThought</span><span class="insight">Insight</span></p>
