--- a/about.html
+++ b/about.html
@@ -30,12 +30,12 @@
 
             <h2>Who I Am</h2>
             <img src="./Jaja.jpg" alt="Image of Jaja Victor Barisuka">
-            <p>Founded and created by <strong>Jaja Victor Barisuka</strong>, this blog is dedicated to delivering high-quality, informative, and engaging content. From tech innovations to social media growth hacks, my mission is to empower individuals and businesses to thrive in the digital world.</p><br>
+            <p>Founded and created by <strong>Jaja Victor Barisuka</strong>, this website is dedicated to delivering high-quality, informative, and engaging content. From tech innovations to social media growth hacks, my mission is to empower individuals and businesses to thrive in the digital world.</p><br>
 
 
             <h2>What I Cover</h2>
             <ul>
-                <li><strong>Tech News:</strong> Stay updated on the latest innovations and trends in technology.</li>
+                <li><strong>Web Development:</strong> Stay Updated with the latest trends and changes in web development.</li>
                 <li><strong>Social Media Marketing:</strong> Proven strategies to grow your online presence across platforms.</li>
                 <li><strong>SEO Optimization:</strong> Expert tips to rank higher on search engines and drive organic traffic.</li>
                 <li><strong>Content Writing:</strong> Insights into modern content creating and writing strategies.</li>
@@ -43,7 +43,7 @@
 
 
             <h2>Mission</h2>
-       <p>My mission is to inform, educate, and inspire my audience by providing valuable insights and actionable tips in the tech, social media marketing, content writing, SEO tips and front-end web development which are all skills I have learnt and developed over the years. As a professional in this fields, Whether you're a content creator, blogger, a tech enthusiast, or a digital marketer, I've got something for you.</p><br>
+       <p>With my expertise in Web Development, Social Media Marketing and Management, Content Writing, Search Engine Optimization..My mission is to inform, educate, and inspire my audience by providing valuable insights and actionable tips in the tech, social media marketing, content writing, SEO tips and front-end web development which are all skills I have learnt and developed over the years. As a professional in this fields, Whether you're a content creator, blogger, a tech enthusiast, or a digital marketer, I've got something for you.</p><br>
 
 
             <h2>Future Plans</h2>
