--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
 
 
             <h2>Join My Community</h2>
-            <p>Ready to stay ahead of the curve? <a href="mailto: victorjaja500@gmail.com">Contact me</a> or follow us on our social media platforms to join our growing community.</p><br>
+            <p>Ready to stay ahead of the curve? <a href="mailto: victorjaja500@gmail.com">Contact me</a> or follow me on my social media platforms to join my growing community.</p><br>
 
  
       </div>
