--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -83,8 +83,8 @@
 
 
             <h2>10. Contact </h2>
-            <p>If you have any questions about this Privacy Policy, please contact me at:</p>
-            <p>Email: <a href="mailto: victorjaja500@gmail.com.com"> victorjaja500@gmail.com</a></p><br>
+            <p>If you have any questions about this Privacy Policy, please <a href="mailto: victorjaja500@gmail.com>Click Here</a> to contact me.</p>
+           
 
 
       </div>
