--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -83,7 +83,7 @@
 
 
             <h2>10. Contact </h2>
-            <p>If you have any questions about this Privacy Policy, please <a href="mailto: victorjaja500@gmail.com>Click Here</a> to contact me.</p>
+            <p>If you have any questions about this Privacy Policy, please <a href="mailto: victorjaja500@gmail.com">Click Here</a> to contact me.</p>
            
 
 
