--- a/localsearches.html
+++ b/localsearches.html
@@ -87,29 +87,24 @@
 
         <section>
             <h2>Final Thoughts</h2>
-            <p>And there you have it! These easy tips can help your business stand out in local searches on Facebook. By making small tweaks to your page and staying consistent, you’ll attract more customers from your area in no time.</p>
-            <p>Ready to make your page shine? Start implementing these tips today and watch the magic happen!</p>
-        </section><br>
+            <p>And there you have it! These easy tips can help your business stand out in local searches on Facebook. By making small tweaks to your page and staying consistent, you’ll attract more customers from your area in no time.<br>
+
+            Ready to make your page shine? Start implementing these tips today and watch the magic happen!<br>
+
+       Ready to take your business to the next level? Let’s make it happen! <a href="mailto: victorjaja500@gmail.com">Contact me here</a> for more strategies.<br>
 
 
-        <section>
-            <h3>Image Placeholder</h3>
-            <p>[Insert an image of a business owner using Facebook on a laptop, with a visible storefront in the background.]</p>
-        </section><br>
-
-
-        <p>Ready to take your business to the next level? Let’s make it happen! <a href="mailto: victorjaja500@gmail.com">Contact me here</a> for more strategies.</p><br>
-
-
-        <p>Stay Ahead With Thoughtful Insights!</p>
+        Stay Ahead With Thoughtful Insights!<br>
 
 
 <fieldset>
     <legend>You might also like</legend>
  <div class="card-title"><a href="./facebookmarketing.html">TOP FACEBOOK MARKETING STRATEGIES FOR SMALL BUSINESSES IN 2025</a></div>
 </fieldset>
-    </div>
+    </p>
+        </section><br>
 
+</div>
 
     <footer class="footer">
       <p>© 2025 <span class="prothought">ProThought</span><span class="insight">Insight</span></p>
