--- a/localsearches.html
+++ b/localsearches.html
@@ -87,22 +87,19 @@
 
         <section>
             <h2>Final Thoughts</h2>
-            <p>And there you have it! These easy tips can help your business stand out in local searches on Facebook. By making small tweaks to your page and staying consistent, you’ll attract more customers from your area in no time.<br>
+            <p>And there you have it! These easy tips can help your business stand out in local searches on Facebook. By making small tweaks to your page and staying consistent, you’ll attract more customers from your area in no time.</p>
 
-            Ready to make your page shine? Start implementing these tips today and watch the magic happen!<br>
+            <p>Ready to make your page shine? Start implementing these tips today and watch the magic happen! <a href="mailto: victorjaja500@gmail.com">Contact me here</a> for more strategies.</p>
 
-       Ready to take your business to the next level? Let’s make it happen! <a href="mailto: victorjaja500@gmail.com">Contact me here</a> for more strategies.<br>
-
-
-        Stay Ahead With Thoughtful Insights!<br>
+        <p>Stay Ahead With Thoughtful Insights!</p>
 
 
 <fieldset>
     <legend>You might also like</legend>
  <div class="card-title"><a href="./facebookmarketing.html">TOP FACEBOOK MARKETING STRATEGIES FOR SMALL BUSINESSES IN 2025</a></div>
 </fieldset>
-    </p>
-        </section><br>
+   
+        </section>
 
 </div>
 
