--- a/youtubemarketing.html
+++ b/youtubemarketing.html
@@ -98,12 +98,8 @@
 
 
         <section>
-            <h3>Image Placeholder</h3>
-            <p>[Insert an image of a business owner filming a product demo for YouTube.]</p>
-        </section><br>
-
-
-        <p>Ready to take your business to the next level? Let’s make it happen! <a href="mailto: victorjaja500@gmail.com">Contact me here</a> for more strategies.</p><br>
+        <p>Ready to take your business to the next level? Let’s make it happen! <a href="mailto: victorjaja500@gmail.com">Contact me here</a> for more strategies.</p>
+         </section><br>
 
 
         <p>Stay Ahead With Thoughtful Insights!</p>
