--- a/youtubeaudience.html
+++ b/youtubeaudience.html
@@ -113,12 +113,8 @@
 
 
        <section>
-            <h2>Image Placeholder</h2>
-            <p>[Insert an image of a content creator recording a video with professional equipment.]</p>
-        </section><br> 
-
-
-        <p>Got any questions or need some extra tips?  <a href="mailto: victorjaja500@gmail.com">reach out to me here</a>. Let’s grow together!</p><br>
+        <p>Got any questions or need some extra tips?  <a href="mailto: victorjaja500@gmail.com">reach out to me here</a>. Let’s grow together!</p>
+            </section><br> 
 
 
         <p>Stay Ahead With Thoughtful Insights!</p>
