--- a/localsearches.html
+++ b/localsearches.html
@@ -88,8 +88,11 @@
         <section>
             <h2>Final Thoughts</h2>
             <p>And there you have it! These easy tips can help your business stand out in local searches on Facebook. By making small tweaks to your page and staying consistent, you’ll attract more customers from your area in no time.</p>
+       </section><br>
 
+         <section>
             <p>Ready to make your page shine? Start implementing these tips today and watch the magic happen! <a href="mailto: victorjaja500@gmail.com">Contact me here</a> for more strategies.</p>
+        </section><br>
 
         <p>Stay Ahead With Thoughtful Insights!</p>
 
@@ -99,7 +102,6 @@
  <div class="card-title"><a href="./facebookmarketing.html">TOP FACEBOOK MARKETING STRATEGIES FOR SMALL BUSINESSES IN 2025</a></div>
 </fieldset>
    
-        </section>
 
 </div>
 
