--- a/termsandconditions.html
+++ b/termsandconditions.html
@@ -90,8 +90,7 @@
     
   
         <footer class="footer">
-      <p>© 2025 <span class="prothought">ProThought</span><span class="insight">Insight</span></p>
-    <p id="text">"Stay Ahead With Thoughtful Insights"</p>
+       <p>© 2025 <span class="prothought">ProThought</span><span class="insight">Insight</span><br><span class="texts">"Stay Ahead With Thoughtful Insights"</span></p>
     <p id="terms">     <a href="./termsandconditions.html">TERMS AND CONDITIONS</a></p>
   </footer>
     
