--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
 
        <footer class="footer">
       <p>© 2025 <span class="prothought">ProThought</span><span class="insight">Insight</span><br><span class="texts">"Stay Ahead With Thoughtful Insights"</span></p>
-     <nav class="nav>
+     <nav class="nav">
          <a href="./termsandconditions.html">TERMS AND CONDITIONS</a>
      </nav>
   </footer>
