--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
 
 
             <h2>Future Plans</h2>
-            <p>I'm not stopping here! I will expand into video content through my upcoming <strong>YouTube channel</strong> to provide more engaging and interactive content. Stay tuned!</p><br>
+            <p>I'm not stopping here! I will expand into video content through my upcoming <strong>Tiktok Handle</strong> to provide more engaging and interactive content. Stay tuned!</p><br>
 
 
             <h2>Join My Community</h2>
