--- a/localsearches.html
+++ b/localsearches.html
@@ -102,14 +102,16 @@
  <div class="card-title"><a href="./facebookmarketing.html">TOP FACEBOOK MARKETING STRATEGIES FOR SMALL BUSINESSES IN 2025</a></div>
 </fieldset>
    
-
 </div>
 
-    <footer class="footer">
-     <p>© 2025 <span class="prothought">ProThought</span><span class="insight">Insight</span><br><span class="texts">"Stay Ahead With Thoughtful Insights"</span></p>
-    <p id="terms">     <a href="./termsandconditions.html">TERMS AND CONDITIONS</a></p>
+
+       <footer class="footer">
+      <p>© 2025 <span class="prothought">ProThought</span><span class="insight">Insight</span><br><span class="texts">"Stay Ahead With Thoughtful Insights"</span></p>
+     <nav class="nav">
+         <a href="./termsandconditions.html">TERMS AND CONDITIONS</a>
+     </nav>
   </footer>
-    
+
 
 
 </body>
