--- a/Facebook-Local-SEO/index.html
+++ b/Facebook-Local-SEO/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Learn how to optimize your Facebook page for local searches and attract more customers in your area with these simple tips!">
     <meta name="keywords" content="Facebook Page Optimization, Local SEO, Facebook SEO, Social Media Marketing, Local Business Marketing">
     <meta name="author" content="Jaja Victor Barisuka">
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./CSS/styles.css">
     <title>Optimizing Your Facebook Page for Local Searches | Jaja Victor Barisuka Blog</title>
 </head>
 <body>
@@ -16,9 +16,9 @@
       <span class="prothought">ProThought</span><span class="insight">Insight</span>
     </div>
     <nav class="nav">
-      <a href="./index.html">HOME</a>
-      <a href="./privacypolicy.html">PRIVACY POLICY</a>
-      <a href="./about.html">ABOUT</a>
+      <a href="./Home/index.html">HOME</a>
+      <a href="./Privacy-Policy/index.html">PRIVACY POLICY</a>
+      <a href="./About/index.html">ABOUT</a>
     </nav>
   </header>
     
@@ -99,7 +99,7 @@
 
 <fieldset>
     <legend>You might also like</legend>
- <div class="card-title"><a href="./facebookmarketing.html">TOP FACEBOOK MARKETING STRATEGIES FOR SMALL BUSINESSES IN 2025</a></div>
+ <div class="card-title"><a href="./Facebook-Marketing-Strategies/index.html">TOP FACEBOOK MARKETING STRATEGIES FOR SMALL BUSINESSES IN 2025</a></div>
 </fieldset>
    
 </div>
@@ -108,7 +108,7 @@
        <footer class="footer">
       <p>© 2025 <span class="prothought">ProThought</span><span class="insight">Insight</span><br><span class="texts">"Stay Ahead With Thoughtful Insights"</span></p>
      <nav class="nav">
-         <a href="./termsandconditions.html">TERMS AND CONDITIONS</a>
+         <a href="./Terms-and-conditions/index.html">TERMS AND CONDITIONS</a>
      </nav>
   </footer>
 
