--- a/Instagram-Marketing-Strategies/index.html
+++ b/Instagram-Marketing-Strategies/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Instagram Marketing 2025, Small Business Marketing, Instagram Growth Strategies, Social Media Marketing, Instagram Ads">
     <meta name="author" content="Jaja Victor Barisuka">
     <title>Top Instagram Marketing Strategies for Your Small Business | Jaja Victor Barisuka  Blog</title>
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./CSS/styles.css">
 </head>
 <body>
     
@@ -16,9 +16,9 @@
       <span class="prothought">ProThought</span><span class="insight">Insight</span>
     </div>
     <nav class="nav">
-      <a href="./index.html">HOME</a>
-      <a href="./privacypolicy.html">PRIVACY POLICY</a>
-      <a href="./about.html">ABOUT</a>
+      <a href="./Home/index.html">HOME</a>
+      <a href="./Privacy-Policy/index.html">PRIVACY POLICY</a>
+      <a href="./About/index.html">ABOUT</a>
     </nav>
   </header>
     
@@ -123,7 +123,7 @@
 
 <fieldset>
     <legend>You might also like</legend>
- <div class="card-title"><a href="./instagramprofile.html">HOW TO OPTIMIZE YOUR INSTAGRAM PROFILE FOR BUSINESS IN 2025</a></div>
+ <div class="card-title"><a href="Instagram-.html">HOW TO OPTIMIZE YOUR INSTAGRAM PROFILE FOR BUSINESS IN 2025</a></div>
 </fieldset>
 
       </div>
@@ -131,7 +131,7 @@
        <footer class="footer">
       <p>© 2025 <span class="prothought">ProThought</span><span class="insight">Insight</span><br><span class="texts">"Stay Ahead With Thoughtful Insights"</span></p>
      <nav class="nav">
-         <a href="./termsandconditions.html">TERMS AND CONDITIONS</a>
+         <a href="./Terms-and-conditions/index.html">TERMS AND CONDITIONS</a>
      </nav>
   </footer>
 
