--- a/Instagram-Marketing-Strategies/index.html
+++ b/Instagram-Marketing-Strategies/index.html
@@ -123,7 +123,7 @@
 
 <fieldset>
     <legend>You might also like</legend>
- <div class="card-title"><a href="Instagram-.html">HOW TO OPTIMIZE YOUR INSTAGRAM PROFILE FOR BUSINESS IN 2025</a></div>
+ <div class="card-title"><a href="Instagram-Profile-For-Business/index.html">HOW TO OPTIMIZE YOUR INSTAGRAM PROFILE FOR BUSINESS IN 2025</a></div>
 </fieldset>
 
       </div>
