--- a/Instagram-Profile-For-Business/index.html
+++ b/Instagram-Profile-For-Business/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Instagram Business Tips, Instagram Optimization 2025, Grow Instagram Business, Instagram Marketing, Instagram SEO">
     <meta name="author" content="MaoChan">
     <title>How to Optimize Your Instagram Profile for Business in 2025 | Jaja Victor Barisuka Blog</title>
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./CSS/styles.css">
 </head>
 <body>
     
@@ -16,9 +16,9 @@
       <span class="prothought">ProThought</span><span class="insight">Insight</span>
     </div>
     <nav class="nav">
-      <a href="./index.html">HOME</a>
-      <a href="./privacypolicy.html">PRIVACY POLICY</a>
-      <a href="./about.html">ABOUT</a>
+      <a href="./Home/index.html">HOME</a>
+      <a href="./Privacy-Policy/index.html">PRIVACY POLICY</a>
+      <a href="./About/index.html">ABOUT</a>
     </nav>
   </header>
     
@@ -121,7 +121,7 @@
 
 <fieldset>
     <legend>You might also like</legend>
-<div class="card-title"><a href="./instagrammarketing.html">TOP INSTAGRAM MARKETING STRATEGIES FOR YOUR SMALL BUSINESS IN 2025</a></div>
+<div class="card-title"><a href="./Instagram-Marketing-Strategies/index.html">TOP INSTAGRAM MARKETING STRATEGIES FOR YOUR SMALL BUSINESS IN 2025</a></div>
 </fieldset>
 
       </div>
@@ -130,7 +130,7 @@
        <footer class="footer">
       <p>© 2025 <span class="prothought">ProThought</span><span class="insight">Insight</span><br><span class="texts">"Stay Ahead With Thoughtful Insights"</span></p>
      <nav class="nav">
-         <a href="./termsandconditions.html">TERMS AND CONDITIONS</a>
+         <a href="./Terms-and-conditions/index.html">TERMS AND CONDITIONS</a>
      </nav>
   </footer>
 
