--- a/Terms-and-conditions/index.html
+++ b/Terms-and-conditions/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Terms and Conditions, User Agreement, Website Use Policy, Legal Notice">
     <meta name="author" content="Jaja Victor Barisuka">
     <title>Terms and Conditions</title>
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./CSS/styles.css">
 </head>
 <body>
     
@@ -16,9 +16,9 @@
       <span class="prothought">ProThought</span><span class="insight">Insight</span>
     </div>
     <nav class="nav">
-      <a href="./index.html">HOME</a>
-      <a href="./privacypolicy.html">PRIVACY POLICY</a>
-      <a href="./about.html">ABOUT</a>
+      <a href="./Home/index.html">HOME</a>
+      <a href="./Privacy-Policy/index.html">PRIVACY POLICY</a>
+      <a href="./About/index.html">ABOUT</a>
     </nav>
   </header>
   
@@ -91,7 +91,7 @@
        <footer class="footer">
       <p>© 2025 <span class="prothought">ProThought</span><span class="insight">Insight</span><br><span class="texts">"Stay Ahead With Thoughtful Insights"</span></p>
      <nav class="nav">
-         <a href="./termsandconditions.html">TERMS AND CONDITIONS</a>
+         <a href="./Terms-and-conditions/index.html">TERMS AND CONDITIONS</a>
      </nav>
   </footer>
 
