--- a/Home/index.html
+++ b/Home/index.html
@@ -40,7 +40,7 @@
         
         <div class="card">
             <img src="./10.jpeg" alt="Instagram business">
-            <div class="card-title"><a href="./instagramprofile.html">HOW TO OPTIMIZE YOUR INSTAGRAM PROFILE FOR BUSINESS IN 2025</a></div>
+            <div class="card-title"><a href="./Instagram-Profile-For-Business/index.html">HOW TO OPTIMIZE YOUR INSTAGRAM PROFILE FOR BUSINESS IN 2025</a></div>
         </div>
 
         
