--- a/About/index.html
+++ b/About/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Tech News, Social Media Marketing, SEO Optimization, Business, Entertainment, Sports, Politics, Lifestyle, Fashion, Content Writing">
     <meta name="author" content="Jaja Victor Barisuka">
     <title>About</title>
-    <link rel="stylesheet" href="./CSS/styles.css">
+    <link rel="stylesheet" href="../CSS/styles.css">
 </head>
 <body>
     
