--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
     <nav class="nav">
       <a href="./Home/index.html">HOME</a>
-      <a href="./Privacy-Policy/index.html">PRIVACY POLICY</a>
+      <a href="../Privacy-Policy/index.html">PRIVACY POLICY</a>
       <a href="./About/index.html">ABOUT</a>
     </nav>
 
