--- a/Facebook-Local-SEO/index.html
+++ b/Facebook-Local-SEO/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Learn how to optimize your Facebook page for local searches and attract more customers in your area with these simple tips!">
     <meta name="keywords" content="Facebook Page Optimization, Local SEO, Facebook SEO, Social Media Marketing, Local Business Marketing">
     <meta name="author" content="Jaja Victor Barisuka">
-    <link rel="stylesheet" href="./CSS/styles.css">
+    <link rel="stylesheet" href="../CSS/styles.css">
     <title>Optimizing Your Facebook Page for Local Searches | Jaja Victor Barisuka Blog</title>
 </head>
 <body>
