--- a/About/index.html
+++ b/About/index.html
@@ -16,7 +16,7 @@
       <span class="prothought">ProThought</span><span class="insight">Insight</span>
     </div>
     <nav class="nav">
-      <a href="./Home/index.html">HOME</a>
+      <a href="./index.html">HOME</a>
       <a href="./Privacy-Policy/index.html">PRIVACY POLICY</a>
       <a href="./About/index.html">ABOUT</a>
     </nav>
