--- a/Instagram-Profile-For-Business/index.html
+++ b/Instagram-Profile-For-Business/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Instagram Business Tips, Instagram Optimization 2025, Grow Instagram Business, Instagram Marketing, Instagram SEO">
     <meta name="author" content="MaoChan">
     <title>How to Optimize Your Instagram Profile for Business in 2025 | Jaja Victor Barisuka Blog</title>
-    <link rel="stylesheet" href="./CSS/styles.css">
+    <link rel="stylesheet" href="../CSS/styles.css">
 </head>
 <body>
     
@@ -16,7 +16,7 @@
       <span class="prothought">ProThought</span><span class="insight">Insight</span>
     </div>
     <nav class="nav">
-      <a href="./Home/index.html">HOME</a>
+      <a href="./index.html">HOME</a>
       <a href="./Privacy-Policy/index.html">PRIVACY POLICY</a>
       <a href="./About/index.html">ABOUT</a>
     </nav>
