--- a/Privacy-Policy/index.html
+++ b/Privacy-Policy/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Privacy Policy, Data Protection, Personal Information, Cookies, User Data Security">
     <meta name="author" content="Jaja Victor Barisuka">
     <title>Privacy Policy</title>
-    <link rel="stylesheet" href="./CSS/styles.css">
+    <link rel="stylesheet" href="../CSS/styles.css">
 </head>
 <body>
     
@@ -16,7 +16,7 @@
       <span class="prothought">ProThought</span><span class="insight">Insight</span>
     </div>
     <nav class="nav">
-      <a href="./Home/index.html">HOME</a>
+      <a href="./index.html">HOME</a>
       <a href="./Privacy-Policy/index.html">PRIVACY POLICY</a>
       <a href="./About/index.html">ABOUT</a>
     </nav>
