--- a/YouTube-Marketing-Strategies/index.html
+++ b/YouTube-Marketing-Strategies/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="YouTube Marketing 2025, Small Business Marketing, YouTube Growth Strategies, Video Marketing, Business Promotion">
     <meta name="author" content="Jaja Victor Barisuka">
     <title>Top YouTube Marketing Strategies for Your Small Business in 2025 | Jaja Victor Barisuka Blog</title>
-    <link rel="stylesheet" href="./CSS/styles.css">
+    <link rel="stylesheet" href="../CSS/styles.css">
 </head>
 <body>
     
@@ -16,7 +16,7 @@
       <span class="prothought">ProThought</span><span class="insight">Insight</span>
     </div>
     <nav class="nav">
-      <a href="./Home/index.html">HOME</a>
+      <a href="./index.html">HOME</a>
       <a href="./Privacy-Policy/index.html">PRIVACY POLICY</a>
       <a href="./About/index.html">ABOUT</a>
     </nav>
