--- a/Strategies-To-Grow-Your-Youtube-Channel/index.html
+++ b/Strategies-To-Grow-Your-Youtube-Channel/index.html
@@ -17,8 +17,8 @@
     </div>
     <nav class="nav">
       <a href="./index.html">HOME</a>
-      <a href="./Privacy-Policy/index.html">PRIVACY POLICY</a>
-      <a href="./About/index.html">ABOUT</a>
+      <a href="../Privacy-Policy/index.html">PRIVACY POLICY</a>
+      <a href="../About/index.html">ABOUT</a>
     </nav>
   </header>
     
@@ -121,7 +121,7 @@
    
    <fieldset>
     <legend>You might also like</legend>
-  <div class="card-title"><a href="./Youtube-Marketing-Strategies/index.html">TOP YOUTUBE MARKETING STRATEGIES FOR YOUR SMALL BUSINESS IN 2025</a></div>
+  <div class="card-title"><a href="../Youtube-Marketing-Strategies/index.html">TOP YOUTUBE MARKETING STRATEGIES FOR YOUR SMALL BUSINESS IN 2025</a></div>
 </fieldset>
 
       </div>
@@ -129,7 +129,7 @@
        <footer class="footer">
       <p>© 2025 <span class="prothought">ProThought</span><span class="insight">Insight</span><br><span class="texts">"Stay Ahead With Thoughtful Insights"</span></p>
      <nav class="nav">
-         <a href="./Terms-and-conditions/index.html">TERMS AND CONDITIONS</a>
+         <a href="../Terms-and-conditions/index.html">TERMS AND CONDITIONS</a>
      </nav>
   </footer>
     
