--- a/Instagram-Marketing-Strategies/index.html
+++ b/Instagram-Marketing-Strategies/index.html
@@ -17,8 +17,8 @@
     </div>
     <nav class="nav">
       <a href="./index.html">HOME</a>
-      <a href="./Privacy-Policy/index.html">PRIVACY POLICY</a>
-      <a href="./About/index.html">ABOUT</a>
+      <a href="../Privacy-Policy/index.html">PRIVACY POLICY</a>
+      <a href="../About/index.html">ABOUT</a>
     </nav>
   </header>
     
