--- a/Instagram-Marketing-Strategies/index.html
+++ b/Instagram-Marketing-Strategies/index.html
@@ -123,7 +123,7 @@
 
 <fieldset>
     <legend>You might also like</legend>
- <div class="card-title"><a href="Instagram-Profile-For-Business/index.html">HOW TO OPTIMIZE YOUR INSTAGRAM PROFILE FOR BUSINESS IN 2025</a></div>
+ <div class="card-title"><a href="../Instagram-Profile-For-Business/index.html">HOW TO OPTIMIZE YOUR INSTAGRAM PROFILE FOR BUSINESS IN 2025</a></div>
 </fieldset>
 
       </div>
@@ -131,7 +131,7 @@
        <footer class="footer">
       <p>© 2025 <span class="prothought">ProThought</span><span class="insight">Insight</span><br><span class="texts">"Stay Ahead With Thoughtful Insights"</span></p>
      <nav class="nav">
-         <a href="./Terms-and-conditions/index.html">TERMS AND CONDITIONS</a>
+         <a href="../Terms-and-conditions/index.html">TERMS AND CONDITIONS</a>
      </nav>
   </footer>
 
