--- a/Facebook-Local-SEO/index.html
+++ b/Facebook-Local-SEO/index.html
@@ -17,8 +17,8 @@
     </div>
     <nav class="nav">
       <a href="./Home/index.html">HOME</a>
-      <a href="./Privacy-Policy/index.html">PRIVACY POLICY</a>
-      <a href="./About/index.html">ABOUT</a>
+      <a href="../Privacy-Policy/index.html">PRIVACY POLICY</a>
+      <a href="../About/index.html">ABOUT</a>
     </nav>
   </header>
     
@@ -99,7 +99,7 @@
 
 <fieldset>
     <legend>You might also like</legend>
- <div class="card-title"><a href="./Facebook-Marketing-Strategies/index.html">TOP FACEBOOK MARKETING STRATEGIES FOR SMALL BUSINESSES IN 2025</a></div>
+ <div class="card-title"><a href="../Facebook-Marketing-Strategies/index.html">TOP FACEBOOK MARKETING STRATEGIES FOR SMALL BUSINESSES IN 2025</a></div>
 </fieldset>
    
 </div>
@@ -108,7 +108,7 @@
        <footer class="footer">
       <p>© 2025 <span class="prothought">ProThought</span><span class="insight">Insight</span><br><span class="texts">"Stay Ahead With Thoughtful Insights"</span></p>
      <nav class="nav">
-         <a href="./Terms-and-conditions/index.html">TERMS AND CONDITIONS</a>
+         <a href="../Terms-and-conditions/index.html">TERMS AND CONDITIONS</a>
      </nav>
   </footer>
 
