--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
       <span class="prothought">ProThought</span><span class="insight">Insight</span>
     </div>
     <nav class="nav">
-      <a href="../index.html">HOME</a>
-      <a href="../Privacy-Policy/index.html">PRIVACY POLICY</a>
-      <a href="../About/index.html">ABOUT</a>
+      <a href="./index.html">HOME</a>
+      <a href="./Privacy-Policy/">PRIVACY POLICY</a>
+      <a href="./About/">ABOUT</a>
     </nav>
 
   </header>
@@ -28,7 +28,7 @@
         
         <div class="card">
             <img src="./1.jpg" alt="Facebook page"</div>
-            <div class="card-title"><a href="../Facebook-Local-SEO/index.html">OPTIMIZING YOUR FACEBOOK PAGE FOR LOCAL SEARCHES</a></div>
+            <div class="card-title"><a href="./Facebook-Local-SEO/">OPTIMIZING YOUR FACEBOOK PAGE FOR LOCAL SEARCHES</a></div>
         </div>
 
         
