--- a/Facebook-Local-SEO/index.html
+++ b/Facebook-Local-SEO/index.html
@@ -17,8 +17,8 @@
     </div>
     <nav class="nav">
       <a href="./Home/index.html">HOME</a>
-      <a href="../Privacy-Policy/">PRIVACY POLICY</a>
-      <a href="../About/">ABOUT</a>
+      <a href="./Privacy-Policy/">PRIVACY POLICY</a>
+      <a href="./About/">ABOUT</a>
     </nav>
   </header>
     
