--- a/Facebook-Local-SEO/index.html
+++ b/Facebook-Local-SEO/index.html
@@ -16,9 +16,9 @@
       <span class="prothought">ProThought</span><span class="insight">Insight</span>
     </div>
     <nav class="nav">
-      <a href="./Home/index.html">HOME</a>
-      <a href="./Privacy-Policy/">PRIVACY POLICY</a>
-      <a href="./About/">ABOUT</a>
+      <a href="../index.html">HOME</a>
+      <a href="../Privacy-Policy/">PRIVACY POLICY</a>
+      <a href="../About/">ABOUT</a>
     </nav>
   </header>
     
@@ -108,7 +108,7 @@
        <footer class="footer">
       <p>© 2025 <span class="prothought">ProThought</span><span class="insight">Insight</span><br><span class="texts">"Stay Ahead With Thoughtful Insights"</span></p>
      <nav class="nav">
-         <a href="./Terms-and-conditions/">TERMS AND CONDITIONS</a>
+         <a href="../Terms-and-conditions/">TERMS AND CONDITIONS</a>
      </nav>
   </footer>
 
