--- a/Facebook-Local-SEO/index.html
+++ b/Facebook-Local-SEO/index.html
@@ -16,7 +16,7 @@
       <span class="prothought">ProThought</span><span class="insight">Insight</span>
     </div>
     <nav class="nav">
-      <a href="../index.html">HOME</a>
+      <a href="./index.html">HOME</a>
       <a href="../Privacy-Policy/">PRIVACY POLICY</a>
       <a href="../About/">ABOUT</a>
     </nav>
