--- a/About/index.html
+++ b/About/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Tech News, Social Media Marketing, SEO Optimization, Business, Entertainment, Sports, Politics, Lifestyle, Fashion, Content Writing">
     <meta name="author" content="Jaja Victor Barisuka">
     <title>About</title>
-    <link rel="stylesheet" href="./CSS/styles.css">
+    <link rel="stylesheet" href="../CSS/styles.css">
 </head>
 <body>
     
@@ -16,9 +16,9 @@
       <span class="prothought">ProThought</span><span class="insight">Insight</span>
     </div>
     <nav class="nav">
-      <a href="./index.html">HOME</a>
-      <a href="./Privacy-Policy/">PRIVACY POLICY</a>
-      <a href="./About/">ABOUT</a>
+      <a href="../Prothoughtinsight/">HOME</a>
+      <a href="../Privacy-Policy/">PRIVACY POLICY</a>
+      <a href="../About/">ABOUT</a>
     </nav>
   </header>
     
