--- a/Terms-and-conditions/index.html
+++ b/Terms-and-conditions/index.html
@@ -16,9 +16,9 @@
       <span class="prothought">ProThought</span><span class="insight">Insight</span>
     </div>
     <nav class="nav">
-      <a href="./index.html">HOME</a>
-      <a href="../Privacy-Policy/index.html">PRIVACY POLICY</a>
-      <a href="../About/index.html">ABOUT</a>
+      <a href="../Prothoughtinsight/">HOME</a>
+      <a href="../Privacy-Policy/">PRIVACY POLICY</a>
+      <a href="../About/">ABOUT</a>
     </nav>
   </header>
   
@@ -91,7 +91,7 @@
        <footer class="footer">
       <p>© 2025 <span class="prothought">ProThought</span><span class="insight">Insight</span><br><span class="texts">"Stay Ahead With Thoughtful Insights"</span></p>
      <nav class="nav">
-         <a href="../Terms-and-conditions/index.html">TERMS AND CONDITIONS</a>
+         <a href="../Terms-and-conditions/">TERMS AND CONDITIONS</a>
      </nav>
   </footer>
 
