--- a/Privacy-Policy/index.html
+++ b/Privacy-Policy/index.html
@@ -16,9 +16,9 @@
       <span class="prothought">ProThought</span><span class="insight">Insight</span>
     </div>
     <nav class="nav">
-      <a href="../Prothoughtinsight/">HOME</a>
-      <a href="../Privacy-Policy/index.html">PRIVACY POLICY</a>
-      <a href="../About/index.html">ABOUT</a>
+      <a href="../../Prothoughtinsight/">HOME</a>
+      <a href="../Privacy-Policy/">PRIVACY POLICY</a>
+      <a href="../About/">ABOUT</a>
     </nav>
   </header>
     
