--- a/Facebook-Local-SEO/index.html
+++ b/Facebook-Local-SEO/index.html
@@ -16,7 +16,7 @@
       <span class="prothought">ProThought</span><span class="insight">Insight</span>
     </div>
     <nav class="nav">
-      <a href="../Prothoughtinsight/">HOME</a>
+      <a href="index.html">HOME</a>
       <a href="../Privacy-Policy/">PRIVACY POLICY</a>
       <a href="../About/">ABOUT</a>
     </nav>
@@ -99,7 +99,7 @@
 
 <fieldset>
     <legend>You might also like</legend>
- <div class="card-title"><a href="./Facebook-Marketing-Strategies/">TOP FACEBOOK MARKETING STRATEGIES FOR SMALL BUSINESSES IN 2025</a></div>
+ <div class="card-title"><a href="../Facebook-Marketing-Strategies/">TOP FACEBOOK MARKETING STRATEGIES FOR SMALL BUSINESSES IN 2025</a></div>
 </fieldset>
    
 </div>
