--- a/YouTube-Marketing-Strategies/index.html
+++ b/YouTube-Marketing-Strategies/index.html
@@ -16,7 +16,7 @@
       <span class="prothought">ProThought</span><span class="insight">Insight</span>
     </div>
     <nav class="nav">
-      <a href="./index.html">HOME</a>
+      <a href="index.html">HOME</a>
       <a href="../Privacy-Policy/index.html">PRIVACY POLICY</a>
       <a href="../About/index.html">ABOUT</a>
     </nav>
@@ -106,7 +106,7 @@
         
 <fieldset>
     <legend>You might also like</legend>
- <div class="card-title"><a href="../Strategies-To-Grow-Your-Youtube-Channel/index.html">TOP STRATEGIES TO GROW YOUR YOUTUBE CHANNEL</a></div>
+ <div class="card-title"><a href="../Strategies-To-Grow-Your-Youtube-Channel/">TOP STRATEGIES TO GROW YOUR YOUTUBE CHANNEL</a></div>
 </fieldset>
 
 </div>
@@ -114,7 +114,7 @@
        <footer class="footer">
       <p>© 2025 <span class="prothought">ProThought</span><span class="insight">Insight</span><br><span class="texts">"Stay Ahead With Thoughtful Insights"</span></p>
      <nav class="nav">
-         <a href="../Terms-and-conditions/index.html">TERMS AND CONDITIONS</a>
+         <a href="../Terms-and-conditions/">TERMS AND CONDITIONS</a>
      </nav>
   </footer>
 
