--- a/About/index.html
+++ b/About/index.html
@@ -16,9 +16,9 @@
       <span class="prothought">ProThought</span><span class="insight">Insight</span>
     </div>
     <nav class="nav">
-      <a href="index.html">HOME</a>
+      <a href="../index.html">HOME</a>
       <a href="../Privacy-Policy/">PRIVACY POLICY</a>
-      <a href="../About/">ABOUT</a>
+      <a href="About/">ABOUT</a>
     </nav>
   </header>
     
