--- a/About/index.html
+++ b/About/index.html
@@ -18,7 +18,7 @@
     <nav class="nav">
       <a href="../index.html">HOME</a>
       <a href="../Privacy-Policy/">PRIVACY POLICY</a>
-      <a href="About/">ABOUT</a>
+      <a href="../About/">ABOUT</a>
     </nav>
   </header>
     
