--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         
         <div class="card">
             <img src="./25.jpg" alt="Youtube marketing strategies">
-            <div class="card-title"><a href="">TOP YOUTUBE MARKETING STRATEGIES FOR YOUR SMALL BUSINESS IN 2025</a></div>
+            <div class="card-title"><a href="Youtube-Marketing-Strategies/">TOP YOUTUBE MARKETING STRATEGIES FOR YOUR SMALL BUSINESS IN 2025</a></div>
         </div>
 
         
