--- a/About/index.html
+++ b/About/index.html
@@ -29,7 +29,7 @@
 
 
             <h2>Who I Am</h2>
-            <img src="./Jaja.jpg" alt="Image of Jaja Victor Barisuka">
+            <img src="../Jaja.jpg" alt="Image of Jaja Victor Barisuka">
             <p>Founded and created by <strong>Jaja Victor Barisuka</strong>, this website is dedicated to delivering high-quality, informative, and engaging content. From tech innovations to social media growth hacks, my mission is to empower individuals and businesses to thrive in the digital world.</p><br>
 
 
