--- a/Facebook-Local-SEO/index.html
+++ b/Facebook-Local-SEO/index.html
@@ -27,7 +27,7 @@
 
         <h1>Optimizing Your Facebook Page for Local Searches</h1>
         <p class="author-date">By Jaja Victor Barisuka | Published on January 15, 2025</p>
-        <img src="./1.jpg" alt="Facebook local searches"><br>
+        <img src="../1.jpg" alt="Facebook local searches"><br>
 
               
   <section>
