--- a/Facebook-Marketing-Strategies/index.html
+++ b/Facebook-Marketing-Strategies/index.html
@@ -26,7 +26,7 @@
        
         <h1>Top Facebook Marketing Strategies for Small Businesses in 2025</h1>
         <p class="author-date">By Jaja Victor Barisuka | Published on January 18, 2025</p>
-        <img src="./4.jpg" alt="Facebook strategies"><br>
+        <img src="../4.jpg" alt="Facebook strategies"><br>
 
 
     <section>
