--- a/Instagram-Marketing-Strategies/index.html
+++ b/Instagram-Marketing-Strategies/index.html
@@ -27,7 +27,7 @@
         <h1>Top Instagram Marketing Strategies for Your Small Business in 2025</h1>
         <p class="author-date">By Jaja Victor Barisuka | Published on January 19, 2025</p>
 
-      <img src="./21.jpeg" alt="Instagram marketing"><br>
+      <img src="../21.jpeg" alt="Instagram marketing"><br>
 
 
    <section>
