--- a/Instagram-Profile-For-Business/index.html
+++ b/Instagram-Profile-For-Business/index.html
@@ -26,7 +26,7 @@
         
         <h1>How to Optimize Your Instagram Profile for Business in 2025</h1>
         <p class="author-date">By Jaja Victor Barisuka | Published on January 17, 2025</p>
-        <img src="./10.jpeg" alt="Instagram Business"><br>
+        <img src="../10.jpeg" alt="Instagram Business"><br>
 
 
   <section>
