--- a/Strategies-To-Grow-Your-Youtube-Channel/index.html
+++ b/Strategies-To-Grow-Your-Youtube-Channel/index.html
@@ -26,7 +26,7 @@
         
         <h1>Top Strategies to Grow Your YouTube Channel</h1>
         <p class="author-date">By Jaja Victor Barisuka | Published on January 16, 2025</p>
-        <img src="./YoutubeGrowth.jpg" alt="Youtube growth"><br>
+        <img src="../YoutubeGrowth.jpg" alt="Youtube growth"><br>
 
 
    <section>
