--- a/YouTube-Marketing-Strategies/index.html
+++ b/YouTube-Marketing-Strategies/index.html
@@ -26,7 +26,7 @@
         
         <h1>Top YouTube Marketing Strategies for Your Small Business in 2025</h1>
         <p class="author-date">By Jaja Victor Barisuka | Published on January 19, 2025</p>
-        <img src="./25.jpg" alt="YouTube marketing"><br>
+        <img src="../25.jpg" alt="YouTube marketing"><br>
 
  <section>
             <p>Hi there! Are you a small business owner looking to level up your marketing game this year? If so, YouTube is where you need to be. Video content continues to dominate, and with billions of users monthly, YouTube is an incredible platform to connect with your audience and grow your brand.</p>
