--- a/Instagram-Marketing-Strategies/index.html
+++ b/Instagram-Marketing-Strategies/index.html
@@ -106,10 +106,8 @@
         </section><br>
 
 
-        <section>
             <h2>Final Thoughts</h2>
-            <p>Instagram remains a powerful tool for small businesses in 2025. By applying these strategies, you can enhance your reach, grow your audience, and drive sales. Start today and let your business flourish!</p>
-        </section><br>
+            <p>Instagram remains a powerful tool for small businesses in 2025. By applying these strategies, you can enhance your reach, grow your audience, and drive sales. Start today and let your business flourish!</p><br>
      
 
 <fieldset>
