--- a/index.html
+++ b/index.html
@@ -4,7 +4,18 @@
     <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prothoughtinsight</title>
+
+<!-- Open Graph Metadata for Home Page -->
+<meta property="og:type" content="website">
+<meta property="og:title" content="ProThoughtInsight - Stay Ahead With Thoughtful Insights">
+<meta property="og:description" content="Explore trending topics, insightful blogs, and expert content on tech, social media marketing, and more at ProThoughtInsight.">
+<meta property="og:url" content="https://prothoughtinsight.online/">
+<meta property="og:image" content="https://prothoughtinsight.online/images/featured-image.jpg">
+<meta property="og:site_name" content="ProThoughtInsight">
+<meta property="og:locale" content="en_US">
+
     <link rel="stylesheet" href="CSS/styles.css">
+
 </head>
 <body>
     
