--- a/About/index.html
+++ b/About/index.html
@@ -6,6 +6,13 @@
     <meta name="description" content="Explore trending tech news, social media marketing tips, SEO strategies, and lifestyle insights on our blog. Stay informed and grow with us.">
     <meta name="keywords" content="Tech News, Social Media Marketing, SEO Optimization, Business, Entertainment, Sports, Politics, Lifestyle, Fashion, Content Writing">
     <meta name="author" content="Jaja Victor Barisuka">
+<meta property="og:type" content="website">
+<meta property="og:title" content="About ProThoughtInsight">
+<meta property="og:description" content="Discover the vision and mission of ProThoughtInsight, where we provide expert insights into technology, marketing, and blogging trends.">
+<meta property="og:url" content="https://prothoughtinsight.online/about">
+<meta property="og:image" content="https://prothoughtinsight.online/images/about-page-image.jpg">
+<meta property="og:site_name" content="ProThoughtInsight">
+<meta property="og:locale" content="en_US">
     <title>About</title>
     <link rel="stylesheet" href="../CSS/styles.css">
 </head>
