--- a/Facebook-Local-SEO/index.html
+++ b/Facebook-Local-SEO/index.html
@@ -6,6 +6,15 @@
     <meta name="description" content="Learn how to optimize your Facebook page for local searches and attract more customers in your area with these simple tips!">
     <meta name="keywords" content="Facebook Page Optimization, Local SEO, Facebook SEO, Social Media Marketing, Local Business Marketing">
     <meta name="author" content="Jaja Victor Barisuka">
+<meta property="og:type" content="article">
+<meta property="og:title" content="Optimizing Your Facebook Profile For Local Searches.">
+<meta property="og:description" content="Learn How To Improve Your Facebook Profile For Local Searches.">
+<meta property="og:url" content="https://prothoughtinsight.online/Facebook-Local-SEO/">
+<meta property="og:image" content="https://prothoughtinsight.online/../1.jpg">
+<meta property="og:site_name" content="ProThoughtInsight">
+<meta property="og:locale" content="en_US">
+
+
     <link rel="stylesheet" href="../CSS/styles.css">
     <title>Optimizing Your Facebook Page for Local Searches | Jaja Victor Barisuka Blog</title>
 </head>
