--- a/Facebook-Marketing-Strategies/index.html
+++ b/Facebook-Marketing-Strategies/index.html
@@ -6,6 +6,15 @@
     <meta name="description" content="Discover the top Facebook marketing strategies for small businesses to grow your audience and increase sales in 2025.">
     <meta name="keywords" content="Facebook Marketing 2025, Small Business Marketing, Facebook Ads, Social Media Marketing, Facebook Growth Strategies">
     <meta name="author" content="Jaja Victor Barisuka">
+<meta property="og:type" content="article">
+<meta property="og:title" content="Top Facebook Marketing Strategies for Small Businesses in 2025">
+<meta property="og:description" content="Learn the top Facebook marketing strategies to grow your small business in 2025.">
+<meta property="og:url" content="https://prothoughtinsight.online/Facebook-Marketing-Strategies/">
+<meta property="og:image" content="https://prothoughtinsight.online/../4.jpg">
+<meta property="og:site_name" content="ProThoughtInsight">
+<meta property="og:locale" content="en_US">
+
+
     <title>Top Facebook Marketing Strategies for Small Businesses | Jaja Victor Barisuka Blog</title>
     <link rel="stylesheet" href="../CSS/styles.css">
 </head>
