--- a/Instagram-Marketing-Strategies/index.html
+++ b/Instagram-Marketing-Strategies/index.html
@@ -6,6 +6,15 @@
     <meta name="description" content="Discover the top Instagram marketing strategies for small businesses to grow your audience and increase sales in 2025.">
     <meta name="keywords" content="Instagram Marketing 2025, Small Business Marketing, Instagram Growth Strategies, Social Media Marketing, Instagram Ads">
     <meta name="author" content="Jaja Victor Barisuka">
+<meta property="og:type" content="article">
+<meta property="og:title" content="Top Instagram Marketing Strategies for Small Businesses in 2025">
+<meta property="og:description" content="Learn the Top Instagram marketing strategies to grow your small business in 2025.">
+<meta property="og:url" content="https://prothoughtinsight.online/Instagram-Marketing-Strategies/">
+<meta property="og:image" content="https://prothoughtinsight.online/21.jpg">
+<meta property="og:site_name" content="ProThoughtInsight">
+<meta property="og:locale" content="en_US">
+
+
     <title>Top Instagram Marketing Strategies for Your Small Business | Jaja Victor Barisuka  Blog</title>
     <link rel="stylesheet" href="../CSS/styles.css">
 </head>
