--- a/Facebook-Marketing-Strategies/index.html
+++ b/Facebook-Marketing-Strategies/index.html
@@ -10,7 +10,7 @@
 <meta property="og:title" content="Top Facebook Marketing Strategies for Small Businesses in 2025">
 <meta property="og:description" content="Learn the top Facebook marketing strategies to grow your small business in 2025.">
 <meta property="og:url" content="https://prothoughtinsight.online/Facebook-Marketing-Strategies/">
-<meta property="og:image" content="https://prothoughtinsight.online/../4.jpg">
+<meta property="og:image" content="https://prothoughtinsight.online/4.jpg">
 <meta property="og:site_name" content="ProThoughtInsight">
 <meta property="og:locale" content="en_US">
 
