--- a/Instagram-Profile-For-Business/index.html
+++ b/Instagram-Profile-For-Business/index.html
@@ -5,8 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Learn how to optimize your Instagram profile for business in 2025 and turn your followers into loyal customers.">
     <meta name="keywords" content="Instagram Business Tips, Instagram Optimization 2025, Grow Instagram Business, Instagram Marketing, Instagram SEO">
-    <meta name="author" content="MaoChan">
-    <title>How to Optimize Your Instagram Profile for Business in 2025 | Jaja Victor Barisuka Blog</title>
+    <meta name="author" content="Jaja Victor Barisuka">
+    <title>How to Optimize Your Instagram Profile for Business in 2025| Jaja Victor Barisuka Blog</title>
+<meta property="og:type" content="article">
+<meta property="og:title" content="How to Optimize Your Instagram Profile for Business in 2025">
+<meta property="og:description" content="Learn How To Optimize Your Instagram Profile For Business In 2025.">
+<meta property="og:url" content="https://prothoughtinsight.online/Instagram-Profile-For-">
+<meta property="og:image" content="https://prothoughtinsight.online/blog/facebook-marketing-strategies-2025/featured-image.jpg">
+<meta property="og:site_name" content="ProThoughtInsight">
+<meta property="og:locale" content="en_US">
+
+
     <link rel="stylesheet" href="../CSS/styles.css">
 </head>
 <body>
