--- a/Strategies-To-Grow-Your-Youtube-Channel/index.html
+++ b/Strategies-To-Grow-Your-Youtube-Channel/index.html
@@ -7,6 +7,13 @@
     <meta name="keywords" content="YouTube Growth Tips, Grow YouTube Channel, YouTube SEO, YouTube Marketing, Increase YouTube Subscribers">
     <meta name="author" content="Jaja Victor Barisuka">
     <title>Top Strategies to Grow Your YouTube Channel | Jaja Victor Barisuka Blog</title>
+<meta property="og:type" content="article">
+<meta property="og:title" content="Top Strategies To Grow Your YouTube Channel">
+<meta property="og:description" content="Learn The Top Strategies To Grow Your YouTube Channel.">
+<meta property="og:url" content="https://prothoughtinsight.online/Strategies-To-Grow-Your-YouTube-Channel/">
+<meta property="og:image" content="https://prothoughtinsight.online/YoutubeGrowth.jpg">
+<meta property="og:site_name" content="ProThoughtInsight">
+<meta property="og:locale" content="en_US">
     <link rel="stylesheet" href="../CSS/styles.css">
 </head>
 <body>
